<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".EditCardActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <TextView
        android:id="@+id/card_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="card title"
        android:textColor="@color/accentColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/edit_card_topic"
                android:textColor="@color/accentColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_card_topic"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/set_edit_card_topic"
                android:inputType="text"
                android:textColorLink="#FF5F9DF7"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/edit_card_question"
                android:textColor="@color/accentColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_card_question"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/set_edit_card_question"
                android:inputType="text"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/edit_card_answer"
                android:textColor="@color/accentColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_card_answer"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/set_edit_card_answer"
                android:inputType="text"
                android:textSize="13sp" />
        </LinearLayout>

        <Button
            android:id="@+id/update_card_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            android:height="70dp"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/update_card"
            android:textSize="24sp"
            app:cornerRadius="70dp" />

        <Button
            android:id="@+id/delete_card_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            android:height="70dp"
            android:backgroundTint="@color/redColor"
            android:text="@string/delete_card"
            android:textSize="24sp"
            app:cornerRadius="70dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>