<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foregroundGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/edit_user_picture"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/secondaryColor"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="250dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="250dp">

                    <ImageView
                        android:id="@+id/image_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="16dp" />

                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="20dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView62"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/edit_full_name"
                    android:textColor="@color/accentColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="set value"
                    android:inputType="text"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="15dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView61"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/edit_username"
                    android:textColor="@color/accentColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="set value"
                    android:inputType="text"
                    android:textColorLink="#FF5F9DF7"
                    android:textSize="13sp" />
            </LinearLayout>

            <Button
                android:id="@+id/update_user_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:height="70dp"
                android:backgroundTint="@color/greenColor"
                android:text="@string/update_profile"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>